# tiltboard

./: README.md  pyproject.toml
etc/: tb-pub.service  tb-recv.service  tb-recv.socket
src/tiltboard/: __init__.py  publish.py  receive.py
src/tiltboard/resources/: template.html  tiltboard.conf.example  tiltboard.css  tiltboard.gp
